--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
         <meta name="title" content="ACC22 - Reservix - Prototyp" />
         <meta
             name="description"
-            content="Start your next React project with ACC22 admin template. It build with Reactjs, Material-UI, Redux, and Hook for faster web development."
+            content="ACC22 ist eine schlanke, schnelle und effektive Lösung des Access Control Center’s. Developed by StartX Comp GmbH"
         />
         <meta
             name="keywords"
-            content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template"
+            content="ACC22 Prototyp Reservix"
         />
-        <meta name="author" content="acc22" />
+        <meta name="author" content="StartX Comp GmbH" />
         <!-- Open Graph / Facebook -->
         <!-- <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
