--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
         <meta property="og:site_name" content="ACC22dashboard.io" />
         <meta property="article:publisher" content="https://www.facebook.com/codedthemes" />
         <meta property="og:title" content="ACC22 - React Material Dashboard Template" /> -->
-        <!-- <meta
+        <meta
             property="og:description"
             content="ACC22 Dashboard is made for the faster web application development built using Material-UI, Reactjs, Redux & Hook API."
         />
-        <meta property="og:image" content="https://ACC22dashboard.io/og-image/og-facebook.png" /> -->
+        <!-- <meta property="og:image" content="https://ACC22dashboard.io/og-image/og-facebook.png" /> -->
         <!-- Twitter -->
-        <!-- <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://ACC22dashboard.io" />
         <meta property="twitter:title" content="ACC22 - React Material Dashboard Template" />
         <meta
@@ -38,7 +38,7 @@
             content="ACC22 Dashboard is made for the faster web application development built using Material-UI, Reactjs, Redux & Hook API."
         />
         <meta property="twitter:image" content="https://ACC22dashboard.io/og-image/og-twitter.png" />
-        <meta name="twitter:creator" content="@codedthemes" /> -->
+        <!-- <meta name="twitter:creator" content="@codedthemes" /> -->
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
